tests/NormalTests/paczka1/small_fuzzy/57485294.err
Error in line 5: GF1G S55 48,4
Error in line 1: LE2a2usvyZ S55 32,8
